force-app/main/default/objects/Blood_Request__c/Blood_Request__c.object-meta.xml
<CustomObject>
    <description>Patients requesting blood</description>
    <label>Blood Request</label>
    <nameField>
        <displayFormat>BR-{0000}</displayFormat>
        <label>Blood Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Blood Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>