force-app/main/default/objects/Blood_Request__c/fields/Attender_Contact__c.field-meta.xml
<CustomField>
    <fullName>Attender_Contact__c</fullName>
    <label>Attender Contact</label>
    <type>Phone</type>
</CustomField>