force-app/main/default/objects/Blood_Request__c/fields/Attender_Name__c.field-meta.xml
<CustomField>
    <fullName>Attender_Name__c</fullName>
    <description>Attender&apos;s Name</description>
    <label>Attender Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>