force-app/main/default/objects/Blood_Request__c/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <label>District</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>State__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chennai</fullName>
            </value>
            <value>
                <fullName>Kanchipuram</fullName>
            </value>
            <value>
                <fullName>Trichy</fullName>
            </value>
            <value>
                <fullName>Bangalore</fullName>
            </value>
            <value>
                <fullName>Mysore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>