force-app/main/default/objects/Blood_Request__c/fields/Hospital__c.field-meta.xml
<CustomField>
    <fullName>Hospital__c</fullName>
    <description>Patient admitted hospital</description>
    <label>Hospital</label>
    <length>255</length>
    <type>Text</type>
</CustomField>