force-app/main/default/objects/Blood_Request__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Patient&apos;s location</description>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>District__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Chennai</fullName>
            </value>
            <value>
                <fullName>Pallavaram</fullName>
            </value>
            <value>
                <fullName>Tambaram</fullName>
            </value>
            <value>
                <fullName>Chromepet</fullName>
            </value>
            <value>
                <fullName>Nungambakkam</fullName>
            </value>
            <value>
                <fullName>Trichy</fullName>
            </value>
            <value>
                <fullName>Srirangam</fullName>
            </value>
            <value>
                <fullName>Thiriverumbur</fullName>
            </value>
            <value>
                <fullName>KK Nagar</fullName>
            </value>
            <value>
                <fullName>Little Kanchi</fullName>
            </value>
            <value>
                <fullName>Orikkai</fullName>
            </value>
            <value>
                <fullName>Sevvilimedu</fullName>
            </value>
            <value>
                <fullName>Walajabad</fullName>
            </value>
            <value>
                <fullName>Bangalore</fullName>
            </value>
            <value>
                <fullName>Kamanahalli</fullName>
            </value>
            <value>
                <fullName>Krishnaraja</fullName>
            </value>
            <value>
                <fullName>Bannur</fullName>
            </value>
            <value>
                <fullName>Mysore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>