force-app/main/default/objects/Blood_Request__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <description>Patient&apos;s name</description>
    <label>Patient</label>
    <length>255</length>
    <type>Text</type>
</CustomField>