force-app/main/default/objects/Blood_Request__c/fields/Request_Blood_Group__c.field-meta.xml
<CustomField>
    <fullName>Request_Blood_Group__c</fullName>
    <description>Patient requesting blood group</description>
    <label>Request Blood Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>