force-app/main/default/objects/Blood_Request__c/validationRules/Attender_Contact_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Attender_Contact_Required</fullName>
    <active>true</active>
    <description>Make the attender contact required when attender name is entered</description>
    <errorConditionFormula>AND(

  NOT(ISBLANK( Attender_Name__c)),

 ISBLANK( Attender_Contact__c)
)</errorConditionFormula>
    <errorDisplayField>Attender_Contact__c</errorDisplayField>
    <errorMessage>Attender Phone Number is required</errorMessage>
</ValidationRule>