force-app/main/default/objects/Blood_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Age__c</columns>
    <columns>Hospital__c</columns>
    <columns>Location__c</columns>
    <columns>Request_Blood_Group__c</columns>
    <columns>Attender_Contact__c</columns>
    <columns>Attender_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>